# Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  Makefile  README.md  global.h  main.c  sdlevent.c  sdlevent.h  sdlshape.c  sdlshape.h
inc/: global.h  sdlevent.h  sdlrender.h  sdlshape.h
src/: main.c  sdlevent.c  sdlrender.c  sdlshape.c
